--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-.header {
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.header .container {
   display: flex;
+  padding: 10px;
 }
 .address {
   display: flex;
