--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,11 @@
 .navbar {
   background: #E53935;
 }
+.logo {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #fff;
+  font-size: 1.3rem;
+}
