--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .header .container {
   display: flex;
   padding: 10px;
+  justify-content: space-between;
 }
 .address {
   display: flex;
@@ -22,6 +23,9 @@
 .social-links {
   display: flex;
   list-style: none;
+}
+.social-links li {
+  padding-right: 10px;
 }
 .navbar {
   background: #E53935;
