--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,12 @@
 .navbar {
   background: #E53935;
 }
+.navbar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0;
+}
 .logo {
   display: flex;
   align-items: center;
@@ -37,4 +43,11 @@
   font-weight: 600;
   color: #fff;
   font-size: 1.3rem;
+}
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+.nav-links li {
+  padding-right: 10px;
 }
