--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0;
+  padding: 10px 0;
 }
 .logo {
   display: flex;
@@ -44,10 +44,17 @@
   color: #fff;
   font-size: 1.3rem;
 }
+.logo img {
+  padding: 0 10px;
+}
 .nav-links {
   list-style: none;
   display: flex;
 }
 .nav-links li {
-  padding-right: 10px;
+  padding: 0 20px;
+}
+.nav-links a {
+  text-decoration: none;
+  color: #fff;
 }
