--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,28 @@
   text-decoration: none;
   color: #fff;
 }
+
+.banner {
+  color: #fff;
+}
+.banner img {
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
+.banner .container {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-left: 50px;
+}
+.banner h3 {
+  font-weight: 500;
+}
+.banner h1 {
+  font-size: 2.5rem; 
+  font-weight: 600;
+}
+.banner p {
+  max-width: 584px;
+}
