--- a/src/App.css
+++ b/src/App.css
@@ -68,10 +68,8 @@
   z-index: -1;
 }
 .banner .container {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  margin-left: 50px;
+  position: relative;
+  padding: 100px 0 0 50px;
 }
 .banner h3 {
   font-weight: 500;
@@ -79,6 +77,7 @@
 .banner h1 {
   font-size: 2.5rem; 
   font-weight: 600;
+  line-height: 1.1;
 }
 .banner p {
   max-width: 584px;
